# subman

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: document.cpp  document.h  duration.cpp  duration.h  main.cpp  search.cpp  search.h  stats.cpp  stats.h  styledstring.cpp  styledstring.h  subtitle.cpp  subtitle.h  utilities.cpp  utilities.h  verse.cpp  verse.h
src/formats/: subrip.cpp  subrip.h
